tests/errors/multifile/include/skip_file/lib2.h
void first_file_func()
{
	very_important_var ===== 7;

	#define !@#$%^&*()
}
